--- a/webApp/src/jsMain/resources/scanner.html
+++ b/webApp/src/jsMain/resources/scanner.html
@@ -29,6 +29,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap"
         rel="stylesheet" />
 
+    <!-- Theme System -->
+    <link href="theme.css" rel="stylesheet" />
     <!-- Scanner Page Styles -->
     <link href="scanner.css" rel="stylesheet" />
     <!-- Page Transitions -->
@@ -83,6 +85,12 @@
                     <span class="material-symbols-outlined">sports_esports</span>
                     <span>Beat the Bot</span>
                 </a>
+
+                <div class="nav-section-label">Reports</div>
+                <a class="nav-link" href="export.html" id="nav-export">
+                    <span class="material-symbols-outlined">download</span>
+                    <span>Export</span>
+                </a>
             </nav>
 
             <!-- Sidebar Footer -->
@@ -124,6 +132,10 @@
                         </span>
                         <span class="status-text">Engine Active</span>
                     </div>
+                    <button class="theme-toggle" aria-label="Toggle theme" title="Toggle light/dark mode">
+                        <span class="material-symbols-outlined icon-light">light_mode</span>
+                        <span class="material-symbols-outlined icon-dark">dark_mode</span>
+                    </button>
                     <button class="notification-btn" id="notificationBtn" aria-label="Notifications">
                         <span class="material-symbols-outlined">notifications</span>
                         <span class="notification-badge"></span>
@@ -341,6 +353,8 @@
     <script src="webApp.js"></script>
     <!-- QR Scanning Library -->
     <script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.min.js"></script>
+    <!-- Theme System -->
+    <script src="theme.js"></script>
     <!-- Page Transitions -->
     <script src="transitions.js"></script>
     <!-- Shared UI Components -->
