--- a/webApp/src/jsMain/resources/game.html
+++ b/webApp/src/jsMain/resources/game.html
@@ -30,6 +30,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap"
         rel="stylesheet" />
 
+    <!-- Theme System -->
+    <link href="theme.css" rel="stylesheet" />
     <!-- Game Styles -->
     <link href="game.css" rel="stylesheet" />
     <!-- Page Transitions -->
@@ -82,6 +84,12 @@
                     <span class="material-symbols-outlined filled">sports_esports</span>
                     <span>Beat the Bot</span>
                 </a>
+
+                <div class="nav-section-label">Reports</div>
+                <a class="nav-link" href="export.html" id="nav-export">
+                    <span class="material-symbols-outlined">download</span>
+                    <span>Export</span>
+                </a>
             </nav>
 
             <div class="sidebar-footer">
@@ -115,6 +123,10 @@
                 </div>
 
                 <div class="header-right">
+                    <button class="theme-toggle" aria-label="Toggle theme" title="Toggle light/dark mode">
+                        <span class="material-symbols-outlined icon-light">light_mode</span>
+                        <span class="material-symbols-outlined icon-dark">dark_mode</span>
+                    </button>
                     <div class="engine-status">
                         <span class="status-dot pulse"></span>
                         <span>Offline Engine V.2.4</span>
@@ -389,6 +401,8 @@
 
     <!-- Kotlin/JS Bundle -->
     <script src="webApp.js"></script>
+    <!-- Theme System -->
+    <script src="theme.js"></script>
     <!-- Page Transitions -->
     <script src="transitions.js"></script>
     <!-- Shared UI Components -->
