feat: Refactor Beat The Bot game with ViewModel, new UI, and sandbox integration

--- a/webApp/src/jsMain/resources/export.html
+++ b/webApp/src/jsMain/resources/export.html
@@ -32,7 +32,7 @@
     <!-- Theme System -->
     <link href="theme.css" rel="stylesheet" />
     <!-- Export Page Styles -->
-    <link href="export.css" rel="stylesheet" />
+    <link href="export.css?v=2" rel="stylesheet" />
     <!-- Page Transitions -->
     <link href="transitions.css" rel="stylesheet" />
     <!-- Shared UI Components -->
@@ -70,12 +70,6 @@
                     <span>Scan History</span>
                 </a>
 
-                <div class="nav-section-label">Reports</div>
-                <a class="nav-link active" href="export.html" id="nav-export">
-                    <span class="material-symbols-outlined filled">file_upload</span>
-                    <span>Export</span>
-                </a>
-
                 <div class="nav-section-label">Security</div>
                 <a class="nav-link" href="trust.html" id="nav-allowlist">
                     <span class="material-symbols-outlined">verified_user</span>
@@ -90,6 +84,12 @@
                 <a class="nav-link" href="game.html" id="nav-game">
                     <span class="material-symbols-outlined">sports_esports</span>
                     <span>Beat the Bot</span>
+                </a>
+
+                <div class="nav-section-label">Reports</div>
+                <a class="nav-link active" href="export.html" id="nav-export">
+                    <span class="material-symbols-outlined filled">file_upload</span>
+                    <span>Export</span>
                 </a>
             </nav>
 
