--- a/webApp/src/jsMain/resources/threat.html
+++ b/webApp/src/jsMain/resources/threat.html
@@ -31,7 +31,7 @@
     <!-- Theme System -->
     <link href="theme.css" rel="stylesheet" />
     <!-- Threat Analysis Styles -->
-    <link href="threat.css" rel="stylesheet" />
+    <link href="threat.css?v=3" rel="stylesheet" />
     <!-- Page Transitions -->
     <link href="transitions.css" rel="stylesheet" />
     <!-- Shared UI Components -->
