--- a/webApp/src/jsMain/resources/trust.html
+++ b/webApp/src/jsMain/resources/trust.html
@@ -31,12 +31,12 @@
 
     <!-- Theme System -->
     <link href="theme.css" rel="stylesheet" />
-    <!-- Trust Centre Styles -->
-    <link href="trust.css" rel="stylesheet" />
     <!-- Page Transitions -->
     <link href="transitions.css" rel="stylesheet" />
     <!-- Shared UI Components -->
     <link href="shared-ui.css" rel="stylesheet" />
+    <!-- Trust Centre Styles -->
+    <link href="trust.css?v=6" rel="stylesheet" />
 </head>
 
 <body class="trust-body">
