docs: link recent scans to results

--- a/webApp/src/jsMain/resources/dashboard.html
+++ b/webApp/src/jsMain/resources/dashboard.html
@@ -288,7 +288,7 @@
                         <div class="scans-card">
                             <div class="card-header">
                                 <h3>Recent Scans</h3>
-                                <a href="threat.html" class="view-all-btn">View Full History</a>
+                                <a href="threat.html#scan-history" class="view-all-btn">View Full History</a>
                             </div>
                             <div class="scans-table-container">
                                 <table class="scans-table">
