--- a/webApp/src/jsMain/resources/threat.html
+++ b/webApp/src/jsMain/resources/threat.html
@@ -194,7 +194,7 @@
                     </div>
 
                     <!-- Scan History Section -->
-                    <div class="history-section">
+                    <div class="history-section" id="scan-history">
                         <div class="section-header" style="margin-bottom: 1rem;">
                             <h3>
                                 <span class="material-symbols-outlined"
