feat: enhance verdict display with risk-based scoring and light mode color adjustments, and replace sandboxed preview with URL analysis.

--- a/webApp/src/jsMain/resources/results.html
+++ b/webApp/src/jsMain/resources/results.html
@@ -197,7 +197,7 @@
                                     </div>
                                     <div class="confidence-display">
                                         <div class="confidence-score" id="confidenceScore">99.8%</div>
-                                        <div class="confidence-label">Confidence Score</div>
+                                        <div class="confidence-label" id="confidenceLabel">Confidence Score</div>
                                     </div>
                                 </div>
 
