--- a/webApp/src/jsMain/resources/index.html
+++ b/webApp/src/jsMain/resources/index.html
@@ -21,12 +21,12 @@
     <!-- ==========================================================================
          iOS / Apple PWA Meta Tags (for standalone experience)
          ========================================================================== -->
-    <!-- Apple Touch Icon (iOS Home Screen) -->
-    <link rel="apple-touch-icon" href="assets/logo.svg">
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/logo.svg">
-    <link rel="apple-touch-icon" sizes="167x167" href="assets/logo.svg">
-    <link rel="apple-touch-icon" sizes="152x152" href="assets/logo.svg">
-    <link rel="apple-touch-icon" sizes="120x120" href="assets/logo.svg">
+    <!-- Apple Touch Icon (iOS Home Screen) - Using PNG from iconset -->
+    <link rel="apple-touch-icon" href="assets/icon-256.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/icon-256.png">
+    <link rel="apple-touch-icon" sizes="167x167" href="assets/icon-256.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="assets/icon-128.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="assets/icon-128.png">
 
     <!-- iOS Standalone Mode -->
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -34,7 +34,7 @@
     <meta name="apple-mobile-web-app-title" content="QR-SHIELD">
 
     <!-- iOS Startup Screen Placeholder (uses theme color) -->
-    <meta name="apple-touch-startup-image" href="assets/logo.svg">
+    <meta name="apple-touch-startup-image" href="assets/icon-512.png">
 
     <!-- Disable iOS telephone number detection -->
     <meta name="format-detection" content="telephone=no">
