🎨 Complete logo integration with transparent backgrounds
- Replace all Material Symbol logos with PNG in 9 HTML files
- Remove blue background circles from .logo-icon in 6 CSS files
- Refresh icons from updated QR-SHIELD.iconset
- Update iOS app icons and Logo.imageset
- Update WebApp assets, manifest, and service worker
- Update agent.md and CHANGELOG with comprehensive notes

--- a/webApp/src/jsMain/resources/index.html
+++ b/webApp/src/jsMain/resources/index.html
@@ -72,7 +72,7 @@
         <header class="app-header">
             <div class="brand">
                 <div class="logo-shield" id="logo" data-testid="logo">
-                    <img src="assets/logo.svg" alt="QR-SHIELD Logo" class="logo" style="width: 24px; height: 24px;">
+                    <img src="assets/icon-128.png" alt="QR-SHIELD Logo" class="logo" style="width: 28px; height: 28px;">
                 </div>
                 <div class="app-title">QR-SHIELD</div>
             </div>
