--- a/webApp/src/jsMain/resources/scanner.html
+++ b/webApp/src/jsMain/resources/scanner.html
@@ -49,7 +49,7 @@
             <!-- Logo Area -->
             <div class="sidebar-header">
                 <div class="logo-container">
-                    <span class="material-symbols-outlined logo-icon">shield_lock</span>
+                    <img src="assets/icon-128.png" alt="QR-SHIELD" class="logo-icon" style="width: 28px; height: 28px;">
                     <span class="logo-text">QR-SHIELD</span>
                 </div>
             </div>
