--- a/webApp/src/jsMain/resources/threat.html
+++ b/webApp/src/jsMain/resources/threat.html
@@ -48,7 +48,7 @@
             <div class="sidebar-header">
                 <div class="logo-container">
                     <div class="logo-icon">
-                        <span class="material-symbols-outlined">shield_lock</span>
+                        <img src="assets/icon-128.png" alt="QR-SHIELD" style="width: 32px; height: 32px;">
                     </div>
                     <div class="logo-text">
                         <h1>QR-SHIELD</h1>
