--- a/webApp/src/jsMain/resources/trust.html
+++ b/webApp/src/jsMain/resources/trust.html
@@ -48,7 +48,7 @@
         <aside class="sidebar" id="sidebar">
             <div class="sidebar-header">
                 <h1 class="logo">
-                    <span class="material-symbols-outlined filled">shield_lock</span>
+                    <img src="assets/icon-128.png" alt="QR-SHIELD Logo" class="logo-icon" style="width: 28px; height: 28px;">
                     QR-SHIELD
                 </h1>
                 <p class="version-status">v2.4.1 • <span class="status-secure">System Secure</span></p>
