--- a/webApp/src/jsMain/resources/dashboard.html
+++ b/webApp/src/jsMain/resources/dashboard.html
@@ -49,7 +49,8 @@
         <aside class="sidebar" id="sidebar">
             <div class="sidebar-header">
                 <div class="logo">
-                    <span class="material-symbols-outlined filled">shield_lock</span>
+                    <img src="assets/icon-128.png" alt="QR-SHIELD Logo" class="logo-icon"
+                        style="width: 28px; height: 28px;">
                     <span class="logo-text">QR-SHIELD</span>
                 </div>
             </div>
