--- a/webApp/src/jsMain/resources/export.html
+++ b/webApp/src/jsMain/resources/export.html
@@ -49,7 +49,7 @@
             <div class="sidebar-header">
                 <div class="logo-container">
                     <div class="logo-icon">
-                        <span class="material-symbols-outlined">shield</span>
+                        <img src="assets/icon-128.png" alt="QR-SHIELD" style="width: 32px; height: 32px;">
                     </div>
                     <h1 class="logo-text">QR-SHIELD</h1>
                 </div>
