--- a/webApp/src/jsMain/resources/game.html
+++ b/webApp/src/jsMain/resources/game.html
@@ -49,7 +49,7 @@
         <aside class="sidebar" id="sidebar">
             <div class="sidebar-header">
                 <div class="logo">
-                    <span class="material-symbols-outlined">shield_lock</span>
+                    <img src="assets/icon-128.png" alt="QR-SHIELD" style="width: 32px; height: 32px;">
                     <span class="logo-text">QR-SHIELD</span>
                 </div>
             </div>
