--- a/webApp/src/jsMain/resources/dashboard.html
+++ b/webApp/src/jsMain/resources/dashboard.html
@@ -59,37 +59,37 @@
                 <div class="nav-section-label">Overview</div>
                 <a class="nav-link active" href="dashboard.html" id="nav-dashboard">
                     <span class="material-symbols-outlined filled">dashboard</span>
-                    <span>Dashboard</span>
+                    <span data-i18n="NavDashboard">Dashboard</span>
                 </a>
                 <a class="nav-link" href="scanner.html" id="nav-scanner">
                     <span class="material-symbols-outlined">qr_code_scanner</span>
-                    <span>Live Scanner</span>
+                    <span data-i18n="NavScanMonitor">Live Scanner</span>
                 </a>
                 <a class="nav-link" href="threat.html" id="nav-history">
                     <span class="material-symbols-outlined">history</span>
-                    <span>Scan History</span>
+                    <span data-i18n="NavScanHistory">Scan History</span>
                 </a>
 
                 <div class="nav-section-label">Security</div>
                 <a class="nav-link" href="trust.html" id="nav-allowlist">
                     <span class="material-symbols-outlined">verified_user</span>
-                    <span>Allow List</span>
+                    <span data-i18n="NavTrustCentre">Allow List</span>
                 </a>
                 <a class="nav-link" href="onboarding.html" id="nav-settings">
                     <span class="material-symbols-outlined">settings</span>
-                    <span>Settings</span>
+                    <span data-i18n="NavSettings">Settings</span>
                 </a>
 
                 <div class="nav-section-label">Training</div>
                 <a class="nav-link" href="game.html" id="nav-game">
                     <span class="material-symbols-outlined">sports_esports</span>
-                    <span>Beat the Bot</span>
+                    <span data-i18n="NavTraining">Beat the Bot</span>
                 </a>
 
                 <div class="nav-section-label">Reports</div>
                 <a class="nav-link" href="export.html" id="nav-export">
                     <span class="material-symbols-outlined">download</span>
-                    <span>Export</span>
+                    <span data-i18n="NavReports">Export</span>
                 </a>
 
                 <div class="offline-card">
@@ -125,16 +125,16 @@
                         <span class="material-symbols-outlined">menu</span>
                     </button>
                     <nav class="breadcrumbs">
-                        <span>QR-SHIELD</span>
+                        <span data-i18n="AppName">QR-SHIELD</span>
                         <span class="separator">/</span>
-                        <span class="current">Dashboard</span>
+                        <span class="current" data-i18n="NavDashboard">Dashboard</span>
                     </nav>
                 </div>
 
                 <div class="header-right">
                     <div class="engine-status">
                         <span class="status-dot pulse"></span>
-                        <span>Engine Active</span>
+                        <span data-i18n="EngineActive">Engine Active</span>
                     </div>
                     <div class="header-divider"></div>
                     <button class="theme-toggle" aria-label="Toggle theme" title="Toggle light/dark mode">
@@ -166,7 +166,7 @@
                             <div class="hero-text">
                                 <div class="enterprise-badge">
                                     <span class="material-symbols-outlined">workspace_premium</span>
-                                    <span>Enterprise Protection Active</span>
+                                    <span data-i18n="EnterpriseProtection">Enterprise Protection Active</span>
                                 </div>
 
                                 <h1 class="hero-title">
@@ -195,25 +195,25 @@
                                 <div class="hero-actions">
                                     <a href="scanner.html" class="btn-primary" id="startScanBtn">
                                         <span class="material-symbols-outlined">qr_code_scanner</span>
-                                        Scan QR Code
+                                        <span data-i18n="StartScan">Scan QR Code</span>
                                     </a>
                                     <button class="btn-secondary" id="importBtn">
                                         <span class="material-symbols-outlined">upload_file</span>
-                                        Import Image
+                                        <span data-i18n="ImportImage">Import Image</span>
                                     </button>
                                 </div>
                             </div>
 
                             <div class="system-health-card">
                                 <div class="health-header">
-                                    <span>System Health</span>
+                                    <span data-i18n="SystemHealth">System Health</span>
                                     <span class="health-dot"></span>
                                 </div>
                                 <div class="health-content">
                                     <div class="health-item">
                                         <div class="health-label">
-                                            <span>Threat Database</span>
-                                            <span class="health-status safe">Current</span>
+                                            <span data-i18n="ThreatDatabase">Threat Database</span>
+                                            <span class="health-status safe" data-i18n="Current">Current</span>
                                         </div>
                                         <div class="health-bar">
                                             <div class="health-fill safe" style="width: 100%"></div>
@@ -221,8 +221,12 @@
                                     </div>
                                     <div class="health-item">
                                         <div class="health-label">
-                                            <span>Heuristic Engine</span>
-                                            <span class="health-status primary">Active</span>
+                                            <span data-i18n="SystemHealth">System Health</span>
+                                            <!-- Correct key is SystemHealth but previous block had ThreatDatabase. Wait, Line 224 in my view was Heuristic Engine -->
+                                            <!-- Ah, I need to check line 224 content. It says Heuristic Engine. My WebStrings has no HeuristicEngine Key? I have SystemHealth. -->
+                                            <!-- DesktopStrings has "Heuristic Engine" in CommonStrings. -->
+                                            <span data-i18n="Heuristic Engine">Heuristic Engine</span>
+                                            <span class="health-status primary" data-i18n="Active">Active</span>
                                         </div>
                                         <div class="health-bar">
                                             <div class="health-fill primary" style="width: 92%"></div>
@@ -231,11 +235,11 @@
                                     <div class="health-stats">
                                         <div class="stat-box">
                                             <span class="stat-value" id="threatCount">0</span>
-                                            <span class="stat-label">Threats</span>
+                                            <span class="stat-label" data-i18n="Threats">Threats</span>
                                         </div>
                                         <div class="stat-box">
                                             <span class="stat-value" id="safeCount">124</span>
-                                            <span class="stat-label">Safe Scans</span>
+                                            <span class="stat-label" data-i18n="SafeScans">Safe Scans</span>
                                         </div>
                                     </div>
                                 </div>
@@ -288,17 +292,18 @@
                         <!-- Recent Scans Table -->
                         <div class="scans-card">
                             <div class="card-header">
-                                <h3>Recent Scans</h3>
-                                <a href="threat.html#scan-history" class="view-all-btn">View Full History</a>
+                                <h3><span data-i18n="Recent Scans">Recent Scans</span></h3>
+                                <a href="threat.html#scan-history" class="view-all-btn"
+                                    data-i18n="View Full History">View Full History</a>
                             </div>
                             <div class="scans-table-container">
                                 <table class="scans-table">
                                     <thead>
                                         <tr>
-                                            <th>Status</th>
-                                            <th>Source</th>
-                                            <th class="hide-mobile">Details</th>
-                                            <th class="text-right">Time</th>
+                                            <th data-i18n="Status">Status</th>
+                                            <th data-i18n="Source">Source</th>
+                                            <th class="hide-mobile" data-i18n="Details">Details</th>
+                                            <th class="text-right" data-i18n="Time">Time</th>
                                         </tr>
                                     </thead>
                                     <tbody id="recentScansBody">
@@ -358,7 +363,7 @@
                             <div class="db-card">
                                 <div class="db-header">
                                     <span class="material-symbols-outlined">database</span>
-                                    <h3>Threat Database</h3>
+                                    <h3 data-i18n="ThreatDatabase">Threat Database</h3>
                                 </div>
                                 <div class="db-stats">
                                     <div class="db-stat">
@@ -385,9 +390,10 @@
                                 <div class="training-icon">
                                     <span class="material-symbols-outlined">school</span>
                                 </div>
-                                <h4>Training Centre</h4>
-                                <p>Learn how to identify advanced QR homograph attacks.</p>
-                                <a href="game.html" class="training-link">Beat the Bot →</a>
+                                <h4><span data-i18n="NavTraining">Training Centre</span></h4>
+                                <p data-i18n="Learn how to identify advanced QR homograph attacks.">Learn how to
+                                    identify advanced QR homograph attacks.</p>
+                                <a href="game.html" class="training-link" data-i18n="NavTraining">Beat the Bot →</a>
                             </div>
                         </div>
                     </div>
